@@ -67,7 +67,7 @@ arch_root:
 # Set up syslinux/isolinux help screens.
 .PHONY: arch_boot_screens
 arch_boot_screens:
-	rm -f $(TEMP_BOOT_SCREENS)/* || true
+	-rm -f $(TEMP_BOOT_SCREENS)/*
 	mkdir -p $(TEMP_BOOT_SCREENS)
 	$(foreach IMG,$(wildcard boot/i386/*.txt), \
 		./bootscreen-subst "$(MEDIA_TYPE)" "$(DEBIAN_VERSION)" "$(BUILD_DATE)" \
@@ -80,7 +80,7 @@ arch_boot_screens:
 # Miniature CD image using isolinux, with only an initrd, no udebs or debs.
 .PHONY: arch_miniiso
 arch_miniiso: arch_boot_screens
-	rm -f $(TEMP_CD_TREE)/*
+	-rm -f $(TEMP_CD_TREE)/*
 	mkdir -p $(TEMP_CD_TREE)
 	cp /usr/lib/syslinux/isolinux.bin $(TEMP_CD_TREE)
 	cp $(TEMP_BOOT_SCREENS)/* $(TEMP_CD_TREE)
