@@ -19,6 +19,7 @@ debian-installer (20040204) UNRELEASED; urgency=low
     - Adjust daily-build script for the new build system.
     - Remove special handling for "default", it was broken anyway.
     - Switch back sparc kernel handling in tftpboot.sh to the old value.
+    - Add support for MANIFEST files.
   * Thomas Poindessous
     - Remove redundant kbd-chooser from netboot pkg-list.
     - Add discover, discover-data to sparc netboot image. Closes: #227853
